--- a/primus/configs/models/megatron/language_model.yaml
+++ b/primus/configs/models/megatron/language_model.yaml
@@ -100,6 +100,21 @@ rotary_scaling_factor: 1.0 # float
 mscale: 1.0 # float
 mscale_all_dim: 1.0 # float
 
+# Mamba layer configuration
+mamba_state_dim: 128
+mamba_head_dim: 64
+mamba_num_groups: 8
+mamba_num_heads: null
+mamba_expand: 2
+mamba_d_conv: 4
+disable_mamba_mem_eff_path: false
+
+# Hybrid model configuration
+is_hybrid_model: false # bool
+hybrid_attention_ratio: 0.0 # float range [0,0, 1.0]
+hybrid_mlp_ratio: 0.0 # float range [0,0, 1.0]
+hybrid_override_pattern: null # str
+
 # MTP
 mtp_num_layers: null # int
 mtp_loss_scaling_factor: 0.1 # float
