--- a/primus/configs/models/megatron/mamba_370M.yaml
+++ b/primus/configs/models/megatron/mamba_370M.yaml
@@ -2,7 +2,6 @@ bases:
   - mamba_base.yaml
 
 # Mamba 370M configuration
-
 tokenizer_type: GPT2BPETokenizer
 vocab_size: 50257
 
@@ -10,6 +9,7 @@ vocab_size: 50257
 num_layers: 48
 hidden_size: 1024
 ffn_hidden_size: null
-
-max_position_embeddings: 2048
+mamba_state_dim: 16
+mamba_head_dim: 64
+mamba_num_groups: 8
 
