--- a/.github/workflows/docker/Dockerfile
+++ b/.github/workflows/docker/Dockerfile
@@ -1,37 +1,55 @@
-# Base image
-FROM docker.io/rocm/primus:v25.10
+ARG BASE_IMAGE=docker.io/rocm/primus:v25.10
+FROM ${BASE_IMAGE}
+
+ARG PRIMUS_TURBO_COMMIT
+ARG PRIMUS_TURBO_FRAMEWORK
 ARG ROCSHMEM_COMMIT
 
-# Specify the commit of Primus-Turbo when building: docker build --build-arg PRIMUS_TURBO_COMMIT=xxx .)
-ARG PRIMUS_TURBO_COMMIT
+# Non-interactive APT
+ENV DEBIAN_FRONTEND=noninteractive
 
-# Install basic dependencies
-RUN apt-get update && apt-get install -y rdma-core libibverbs-dev libnuma-dev
+# ---------------------------------------------------------------------------
+# Install build dependencies
+# ---------------------------------------------------------------------------
+RUN apt-get update && \
+    apt-get install -y rdma-core libibverbs-dev libnuma-dev numactl&& \
+    apt-get install -y --reinstall binutils
 
-WORKDIR /opt
-# Clone and install rocSHMEM
-RUN mkdir -p /opt && cd /opt && \
+
+# ---------------------------------------------------------------------------
+# Enviroment variables
+# ---------------------------------------------------------------------------
+ENV ROCSHMEM_HOME=/opt/rocshmem
+ENV UCX_HOME=/opt/ucx
+ENV MPI_HOME=/opt/ompi
+ENV PRIMUS_TURBO_FRAMEWORK=${PRIMUS_TURBO_FRAMEWORK}
+
+# ---------------------------------------------------------------------------
+# Install rocSHMEM
+# ---------------------------------------------------------------------------
+RUN mkdir -p /tmp && cd /tmp && \
     git clone https://github.com/ROCm/rocSHMEM.git && \
     cd rocSHMEM && \
     git checkout ${ROCSHMEM_COMMIT} && \
     mkdir build && \
     cd build && \
-    MPI_ROOT=/opt/ompi UCX_ROOT=/opt/ucx INSTALL_PREFIX=/opt/rocshmem ../scripts/build_configs/gda -DGDA_IONIC=ON -DGDA_MLX5=ON -DGDA_BNXT=ON -DUSE_IPC=ON
+    MPI_ROOT=${MPI_HOME} UCX_ROOT=${UCX_HOME} INSTALL_PREFIX=${ROCSHMEM_HOME} ../scripts/build_configs/gda \
+                                                                                            -DGDA_IONIC=ON \
+                                                                                            -DGDA_MLX5=ON  \
+                                                                                            -DGDA_BNXT=ON  \
+                                                                                            -DUSE_IPC=ON
 
-ENV ROCSHMEM_HOME=/opt/rocshmem
-ENV UCX_HOME=/opt/ucx
-ENV MPI_HOME=/opt/ompi
 
-# Clone and install the Primus-Turbo
-RUN cd /opt && \
+# ---------------------------------------------------------------------------
+# Install Primus-Turbo
+# ---------------------------------------------------------------------------
+RUN cd /tmp && \
     git clone https://github.com/AMD-AGI/Primus-Turbo.git && \
     cd Primus-Turbo && \
     git checkout ${PRIMUS_TURBO_COMMIT} && \
     git submodule update --init --recursive && \
     pip3 install -r requirements.txt && \
     GPU_ARCHS="gfx942;gfx950" pip3 install --no-build-isolation .
-
-RUN apt-get install --reinstall binutils -y && apt-get install numactl -y
 
 
 # Set the default working directory
