--- a/.github/workflows/docker/Dockerfile
+++ b/.github/workflows/docker/Dockerfile
@@ -23,6 +23,8 @@ ENV ROCSHMEM_HOME=/opt/rocshmem
 ENV UCX_HOME=/opt/ucx
 ENV MPI_HOME=/opt/ompi
 ENV PRIMUS_TURBO_FRAMEWORK=${PRIMUS_TURBO_FRAMEWORK}
+ENV LD_LIBRARY_PATH=/opt/rocm/lib:/opt/ucx/lib:/opt/ompi/lib:${LD_LIBRARY_PATH}
+ENV PATH=/opt/rocm/bin:${PATH}:/opt/ompi/bin:/opt/ucx/bin:${PATH}
 
 # ---------------------------------------------------------------------------
 # Install rocSHMEM
