--- a/.github/workflows/docker/Dockerfile
+++ b/.github/workflows/docker/Dockerfile
@@ -58,5 +58,7 @@ RUN cd /tmp && \
 # Set the default working directory
 WORKDIR /opt
 
+RUN ldd /opt/venv/lib/python3.10/site-packages/primus_turbo/lib/libprimus_turbo_kernels.so
+
 # check the installed Primus-Turbo package
 RUN python3 -m pip show primus-turbo || true
