--- a/primus/configs/models/torchtitan/qwen3_1.7b.yaml
+++ b/primus/configs/models/torchtitan/qwen3_1.7b.yaml
@@ -6,4 +6,5 @@ model:
   name: "qwen3"
   flavor: "1.7B"
   hf_assets_path: "Qwen/Qwen3-1.7B"
-  # converters = ["float8"]
+  converters:
+    - primus_turbo
