--- a/primus/configs/models/torchtitan/qwen3_32b.yaml
+++ b/primus/configs/models/torchtitan/qwen3_32b.yaml
@@ -6,4 +6,5 @@ model:
   name: "qwen3"
   flavor: "32B"
   hf_assets_path: "Qwen/Qwen3-32B"
-  # converters = ["float8"]
+  converters:
+    - primus_turbo
