--- a/primus/configs/models/torchtitan/deepseek_v3_16b.yaml
+++ b/primus/configs/models/torchtitan/deepseek_v3_16b.yaml
@@ -8,3 +8,5 @@ model:
   name: "deepseek_v3"
   flavor: "16B"
   hf_assets_path: "deepseek-ai/deepseek-moe-16b-base"
+  converters:
+    - primus_turbo
