--- a/primus/configs/models/torchtitan/llama3.1_8B-fp8.yaml
+++ b/primus/configs/models/torchtitan/llama3.1_8B-fp8.yaml
@@ -7,5 +7,5 @@ model:
   flavor: "8B"
   hf_assets_path: "meta-llama/Llama-3.1-8B"
   converters:
+    - primus_turbo
     - quantize.linear.float8
-    - quantize.grouped_mm.float8
