--- a/primus/configs/models/torchtitan/llama3.1_405B-fp8.yaml
+++ b/primus/configs/models/torchtitan/llama3.1_405B-fp8.yaml
@@ -9,3 +9,4 @@ model:
   n_layers: 126  # Default: 126, can be overridden for debugging
   converters:
     - primus_turbo
+    - quantize.linear.float8
