--- a/examples/torchtitan/configs/MI355X/llama3.1_405B-BF16-pretrain.yaml
+++ b/examples/torchtitan/configs/MI355X/llama3.1_405B-BF16-pretrain.yaml
@@ -28,5 +28,5 @@ modules:
         mode: full
 
       primus_turbo:
-        enable_primus_turbo: false
+        enable_primus_turbo: true
         enable_attention_float8: false
