--- a/examples/torchtitan/configs/MI355X/llama3.1_70B-FP8-pretrain.yaml
+++ b/examples/torchtitan/configs/MI355X/llama3.1_70B-FP8-pretrain.yaml
@@ -20,7 +20,7 @@ modules:
         warmup_steps: 10
 
       profiling:
-        enable_profiling: true
+        enable_profiling: false
         save_traces_folder: "profile_trace"
         profile_freq: 6
 
