--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -219,7 +219,10 @@ jobs:
       - name: Run Primus Core Tests
         run: |
           echo "Running Primus Core tests..."
-          pytest  --maxfail=1 -s ./tests/unit_tests/
+          # Note: The tests `test_fp8_te_linear` and `test_te_linear` are temporarily skipped due to intermittent failures.
+          pytest --maxfail=1 -s ./tests/unit_tests/ \
+            --deselect=tests/unit_tests/megatron/cco/test_tp_overlap.py::TPOverlapTestCase::test_fp8_te_linear \
+            --deselect=tests/unit_tests/megatron/cco/test_tp_overlap.py::TPOverlapTestCase::test_te_linear
       - name: Run Primus Model Tests -- Megatron-LM
         env:
           HF_TOKEN: ${{secrets.HF_TOKEN}}
