--- a/examples/torchtitan/configs/MI355X/llama3.1_405B-FP8-pretrain.yaml
+++ b/examples/torchtitan/configs/MI355X/llama3.1_405B-FP8-pretrain.yaml
@@ -1,6 +1,6 @@
 work_group: ${PRIMUS_TEAM:amd}
 user_name: ${PRIMUS_USER:root}
-exp_name: ${PRIMUS_EXP_NAME:llama3_70B-pretrain}
+exp_name: ${PRIMUS_EXP_NAME:llama3_405B-pretrain}
 workspace: ./output
 
 modules:
@@ -9,32 +9,32 @@ modules:
     config: pre_trainer.yaml
 
     # model to run
-    model: llama3.1_70B-fp8.yaml
+    model: llama3.1_405B-fp8.yaml
     overrides:
       sink_level: null
       file_sink_level: DEBUG
       stderr_sink_level: INFO
 
-      lr_scheduler:
-        # lr scheduler warm up
-        warmup_steps: 10
+      training:
+        local_batch_size: 2
+        steps: 10
 
-      profiling:
-        enable_profiling: false
-        save_traces_folder: "profile_trace"
-        profile_freq: 6
+      # profiling:
+      #   enable_profiling: false
+      #   save_traces_folder: "profile_trace_405B_fp8"
+      #   profile_freq: 6
 
       metrics:
         log_freq: 1
 
-      training:
-        local_batch_size: 6
-        seq_len: 8192
-        mock_data: false
-        steps: 10
+      # model:
+      #   n_layers: 20
 
       optimizer:
-        lr: 1.5e-4
+        lr: 8.0e-5
+
+      parallelism:
+        tensor_parallel_degree: 1
 
       activation_checkpoint:
         mode: full
@@ -47,5 +47,5 @@ modules:
             filter_fqns: ["output"]
 
       primus_turbo:
-        enable_primus_turbo : true
-        enable_attention_float8 : false
+        enable_primus_turbo: true
+        enable_attention_float8: false
