--- a/examples/torchtitan/configs/MI355X/llama3.1_70B-BF16-pretrain.yaml
+++ b/examples/torchtitan/configs/MI355X/llama3.1_70B-BF16-pretrain.yaml
@@ -20,13 +20,18 @@ modules:
         warmup_steps: 10
 
       metrics:
-        log_freq: 10
+        log_freq: 1
 
       training:
         local_batch_size: 8
         seq_len: 8192
         mock_data: false
-        steps: 50
+        steps: 10
+
+      profiling:
+        enable_profiling: false
+        save_traces_folder: "profile_trace_70B_bf16"
+        profile_freq: 6
 
       optimizer:
         lr: 1.5e-4
