ci use fixed black version

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -49,7 +49,7 @@ jobs:
         with:
           isort-version: "5.13.2"
           configuration: "--profile black --check-only --diff"
-      - uses: psf/black@stable
+      - uses: psf/black@24.8.0
         if: always()
         with:
           options: "--check --diff --color --verbose --line-length=110"
