feat: Add Megatron-Bridge backend with ultra-simplified argument builder
- Add Megatron-Bridge as git submodule to third_party/
- Implement MegatronBridgeAdapter and MegatronBridgePosttrainTrainer
- Create ultra-simplified argument_builder following TorchTitan pattern
  * Core logic: ConfigContainer().to_dict() (only 3 lines!)
  * Use deep_merge and nested_namespace utilities
  * Reduced from 496 lines to 129 lines (74% reduction)
- Add post_trainer.yaml configuration (151 parameters)
- Add example configurations for Qwen3-30B-A3B model
  * Full post-training config
  * LoRA post-training config
  * Llama SFT and LoRA configs
- Add comprehensive documentation
  * Quickstart guide
  * Qwen3 post-training guide
  * Integration summary
- Add example run scripts for easy usage

Key improvements:
- Zero maintenance cost (uses official ConfigContainer API)
- Perfect consistency with TorchTitan backend pattern
- Automatic sync with Megatron-Bridge updates
- Clean, readable, and maintainable code

--- a/.gitmodules
+++ b/.gitmodules
@@ -12,3 +12,6 @@
 	path = third_party/Emerging-Optimizers
 	url = https://github.com/NVIDIA-NeMo/Emerging-Optimizers.git
 	branch = main
+[submodule "third_party/Megatron-Bridge"]
+	path = third_party/Megatron-Bridge
+	url = https://github.com/NVIDIA-NeMo/Megatron-Bridge.git
