--- a/examples/torchtitan/configs/MI355X/llama3.1_8B-BF16-pretrain.yaml
+++ b/examples/torchtitan/configs/MI355X/llama3.1_8B-BF16-pretrain.yaml
@@ -21,18 +21,29 @@ modules:
 
       lr_scheduler:
         # lr scheduler warm up
-        warmup_steps: 10
+        warmup_steps: 1
 
+      # profiling:
+      #   enable_profiling: true
+      #   save_traces_folder: "profile_trace_8B_bf16"
+      #   profile_freq: 4
+        
       training:
-        local_batch_size: 6
+        local_batch_size: 1
         seq_len: 8192
-        mock_data: false
-        steps: 50
+        mock_data: true
+        steps: 1
 
+      model:
+        n_layers: 1
+
+      compile:
+        enable: false
+      
       activation_checkpoint:
         mode: "none"  # ["none", "selective", "full"]
         selective_ac_option: "op"  # "int" = ac every positive int layer or 'op', ac based on ops policy
 
       primus_turbo:
-        enable_primus_turbo: true
+        enable_primus_turbo: false
         enable_attention_float8: false
