--- a/requirements-megatron-bridge.txt
+++ b/requirements-megatron-bridge.txt
@@ -10,6 +10,7 @@ flash-linear-attention
 # Multimodal support (for VLM models like Gemma3-VL)
 megatron-energon
 bitstring
+filetype
 
 # Optional: NeMo Run for recipe management
 # nemo-run>=0.5.0a0,<0.6.0
