fix: Remove nvidia-modelopt from requirements due to PyTorch incompatibility
- Comment out onnx==1.20.0rc1 (only needed for modelopt)
- Comment out nvidia-modelopt (breaks with PyTorch 2.x)
- Add extra.checkpoint.pretrained_checkpoint output to hook
- Resolves ImportError: cannot import name '_type_utils' from 'torch.onnx'
- Keep nvidia_resiliency_ext (still needed for training)

--- a/runner/helpers/hooks/train/posttrain/requirements-megatron-bridge.txt
+++ b/runner/helpers/hooks/train/posttrain/requirements-megatron-bridge.txt
@@ -17,8 +17,8 @@ filetype
 
 # NVIDIA packages
 nvidia_resiliency_ext
-onnx==1.20.0rc1
-nvidia-modelopt
+# onnx==1.20.0rc1  # Commented: required only for nvidia-modelopt
+# nvidia-modelopt  # Commented: PyTorch compatibility issue (ImportError: cannot import name '_type_utils')
 
 # Optional: NeMo Run for recipe management
 # nemo-run>=0.5.0a0,<0.6.0
