fix: improve checkpoint conversion with better config parsing and validation
- Fix config file path resolution in 01_convert_checkpoints.sh
- Add detailed validation for post_trainer config structure
- Set up correct PYTHONPATH for megatron.bridge module
- Update checkpoint output path to extra.pretrained_checkpoint
- Add debug logging to stderr for better troubleshooting
- Add pip cache support in 00_install_requirements.sh

--- a/runner/helpers/hooks/train/posttrain/requirements-megatron-bridge.txt
+++ b/runner/helpers/hooks/train/posttrain/requirements-megatron-bridge.txt
@@ -16,7 +16,7 @@ bitstring
 filetype
 
 # NVIDIA packages
-nvidia_resiliency_ext
+# nvidia_resiliency_ext
 # onnx==1.20.0rc1  # Commented: required only for nvidia-modelopt
 # nvidia-modelopt  # Commented: PyTorch compatibility issue (ImportError: cannot import name '_type_utils')
 
